--- a/todo_app/app/views/templates/todo_edit.html
+++ b/todo_app/app/views/templates/todo_edit.html
@@ -1,13 +1,49 @@
 {{define "content"}}
-{{.Content}}
-
-<form role="form" action="/todos/update/{{.ID}}" method="post">
-    <div class="lead">TodosUpdate</div>
-    <div class="form-group">
-      <textarea class="form-control" name="content" id="content" placeholder="Todoを更新" rows="4">{{.Content}}</textarea>
-      <br/>
-      <br/>
-      <button class="btn btn-lg btn-primary pull-right" type="submit">更新</button>
+<div class="row justify-content-center animate__animated animate__fadeIn">
+    <div class="col-md-8">
+        <div class="card shadow-sm">
+            <div class="card-body">
+                <h3 class="card-title text-center mb-4">
+                    <i class="fas fa-edit me-2"></i>Todo編集
+                </h3>
+                
+                <form role="form" action="/todos/update/{{.Id}}" method="post">
+                    <div class="form-group">
+                        <textarea 
+                            class="form-control form-control-lg"
+                            name="content"
+                            id="content"
+                            placeholder="Todoを更新"
+                            rows="4"
+                            autofocus>{{.Content}}</textarea>
+                    </div>
+                    
+                    <div class="d-flex justify-content-between mt-4">
+                        <a href="/todos" class="btn btn-outline-secondary btn-action">
+                            <i class="fas fa-arrow-left me-2"></i>戻る
+                        </a>
+                        <button class="btn btn-primary btn-action" type="submit">
+                            <i class="fas fa-save me-2"></i>更新
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
-  </form>
+</div>
+
+<script>
+$(document).ready(function() {
+    // テキストエリアの自動リサイズ
+    $('textarea').on('input', function() {
+        this.style.height = 'auto';
+        this.style.height = (this.scrollHeight) + 'px';
+    });
+
+    // フォーム送信時のアニメーション
+    $('form').submit(function() {
+        $('.card').addClass('animate__animated animate__fadeOutUp');
+    });
+});
+</script>
 {{end}}
